--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Building
 # events but only for the master branch
 on:
   push:
-    branches: [ master, zhi-github-action ]
+    branches: [ master, zhi-github-action, prithu-dev ]
   pull_request:
     branches: [ master ]
 
@@ -19,33 +19,31 @@ jobs:
         ros_distributions: 
           - melodic
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Setup ROS
-        uses: ros-tooling/setup-ros@0.0.20
-        with: 
-          required-ros-distributions: ${{ matrix.ros_distributions }}
+
       - name: Create Workspace
         run: "mkdir -p ros_ws/src"  
+        
       - uses: actions/checkout@v2
         with:
           path: ros_ws/src/tbd_podi
+          
       - uses: actions/checkout@v2
         with:
           repository: cmu-tbd/tbd_screen_face
           token: ${{secrets.ZHI_PAT_FOR_CI}}
           path: ros_ws/src/tbd_screen_face
-      - name: Install Dependencies
+      
+       - name: Catkin Build
         run: |
           source /opt/ros/${{matrix.ros_distributions}}/setup.bash
-          rosdep update
-          rosdep install -i --from-paths ros_ws/src
-      - name: Catkin Build
-        run: |
-          source /opt/ros/${{matrix.ros_distributions}}/setup.bash
+          source venv/bin/activate
           cd ros_ws
-          catkin_make_isolated
+          ls -a -l
+          catkin clean --yes
+          catkin build -DPYTHON_VERSION=3
 
       
