--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    strategy:
-      matrix:
-        ros_distributions: 
-          - noetic
+    
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
@@ -25,7 +22,7 @@ jobs:
     steps:
       - uses: ros-tooling/setup-ros@0.0.25
         with:
-          required-ros-distributions: ${{ matrix.ros_distribution }}   
+          required-ros-distributions: noetic
       - name: Create Workspace
         run: "mkdir -p ros_ws/src"  
       - uses: actions/checkout@v2
@@ -39,7 +36,7 @@ jobs:
       
       - name: Catkin Build
         run: |
-          source /opt/ros/${{matrix.ros_distributions}}/setup.bash
+          source /opt/ros/noetic/setup.bash
           cd ros_ws
           catkin_make_isolated
 
