--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,10 @@ jobs:
           repository: cmu-tbd/tbd_screen_face
           token: ${{secrets.ZHI_PAT_FOR_CI}}
           path: ros_ws/src/tbd_screen_face
-      
+      - name: Install ROS dependencies
+        run: |
+          cd ros_ws
+          rosdep install --from-paths src --ignore-src
       - name: Catkin Build
         run: |
           source /opt/ros/noetic/setup.bash
