--- a/tbd_podi_2dnav/config/tuning_local_planner_params.yaml
+++ b/tbd_podi_2dnav/config/tuning_local_planner_params.yaml
@@ -1,44 +1,15 @@
 local_costmap:
-  inflation_layer:
-    inflation_radius: 5 # default (0.55) # In meters
-    cost_scaling_factor: 5 # default (10.0)
-  width: 3 #The width of the map in meters.
-  height: 3 #The height of the map in meters.
-
-
-TebLocalPlannerROS:
-  # GoalTolerance    
-  xy_goal_tolerance: 0.2
-  yaw_goal_tolerance: 0.1
-
-  # Trajectory
-  dt_ref: 0.2
-  dt_hysteresis: 0.05
-  min_samples: 3
-  global_plan_overwrite_orientation: False
-  global_blan_viapoint_sep: .1
-  max_global_plan_lookahead_dist: 3.0
-  feasibility_check_no_poses: 5
-    
-  # Obstacles    
-  min_obstacle_dist: 0.1
-  include_costmap_obstacles: True
-  costmap_obstacles_behind_robot_dist: 1.0
-  obstacle_poses_affected: 30
-  inflation_dist: 0.1
-
-  # Optimization
-  no_inner_iterations: 5
-  no_outer_iterations: 4
-  penalty_epsilon: 0.05
-  weight_max_vel_x: 2
-  weight_max_vel_theta: 1
-  weight_acc_lim_x: 1
-  weight_acc_lim_theta: 1
-  weight_kinematics_nh: 1000
-  weight_kinematics_forward_drive: 100
-  weight_optimaltime: 0.1
-  weight_obstacle: 5
-  weight_viapoint: 10
-  weight_inflation: 0.1
-  weight_adapt_factor: 2.0
+  inflation_layer: {inflation_radius: 0.6041393352874909, cost_scaling_factor: 76.38077574408784}
+  width: 0.9459984967337984
+  height: 4.706477141981722
+TebLocalPlannerROS: {xy_goal_tolerance: 0.011444752524901429, yaw_goal_tolerance: 0.27575550491754713,
+  dt_ref: 0.38332389386350496, dt_hysteresis: 0.051327534994775985, min_samples: 4,
+  global_plan_overwrite_orientation: false, global_plan_viapoint_sep: 0.4974662881163869,
+  max_global_plan_lookahead_dist: 0.0026556099199731495, feasibility_check_no_poses: 1,
+  min_obstacle_dist: 0.3441082465225105, include_costmap_obstacles: false, costmap_obstacles_behind_robot_dist: 1.0939370845308796,
+  obstacle_poses_affected: 35, inflation_dist: 0.3444269613803659, no_inner_iterations: 8,
+  no_outer_iterations: 8, penalty_epsilon: 0.06680779627786797, weight_max_vel_x: 54.354007736651404,
+  weight_max_vel_theta: 47.69217841537622, weight_acc_lim_x: 8.999362131976417, weight_acc_lim_theta: 29.28461268533306,
+  weight_kinematics_nh: 9220.038857902913, weight_kinematics_forward_drive: 4358.395033984385,
+  weight_optimaltime: 9.961452180294346, weight_obstacle: 3.305987794881312, weight_viapoint: 32.62856541986059,
+  weight_inflation: 0.1961724203347902, weight_adapt_factor: 2.921957228514355}
